<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddUserActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_contact_Add"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="10sp"/>

    <LinearLayout
        android:id="@+id/linearImag"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_below="@+id/tv_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:civ_border_width="1dp"
            app:civ_border_color="#9F9F9F"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/txt_name"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/gray"
        android:layout_below="@+id/linearImag"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:maxLength="20"
            android:textSize="19sp"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textInputName"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/txt_lastName"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:maxLength="20"
            android:textSize="19sp"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastNames"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textInputLastName"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"

        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/txt_lastNames"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTexMotherLastName"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="55dp"
            android:maxLength="20"
            android:textSize="19sp"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/textInputLastNames"
        android:layout_marginTop="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/txt_phone"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="@color/black"
            android:maxLength="10"
            android:textSize="19sp"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddContact"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/textInputPhone"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/border_btn"
        android:text="Crear contacto"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>